Fixed bugs + added cfgFileUtils