@@ -6,12 +6,10 @@ import java.nio.file.Files;
 import java.nio.file.Paths;
 
 public class readFile {
-    public String fileRead(String filePath) throws IOException {
-        String file = new String(Files.readAllBytes(Paths.get(filePath)), StandardCharsets.UTF_8);
-        return file;
+    public static String fileRead(String filePath) throws IOException {
+        return Files.readString(Paths.get(filePath));
     }
-    public String fileReadLine(String filepath, int line) throws IOException {
-        String file = Files.readAllLines(Paths.get(filepath)).get(line);
-        return file;
+    public static String fileReadLine(String filepath, int line) throws IOException {
+        return Files.readAllLines(Paths.get(filepath)).get(line);
     }
 }
